# w9-search

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.build  README.md  docker-compose.yml  dokploy.yml  entrypoint.sh
searxng/: settings.yml
src/: api.rs  db.rs  llm.rs  main.rs  models.rs  rag.rs  search.rs  templates.rs  tools.rs
static/: style.css
